@@ -6,11 +6,9 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.AccessibleObject;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.util.ArrayList;
-import java.util.List;
 
 /**
  * Helper class that contains some useful methods for easier / more powerful reflection usage.
@@ -20,30 +18,22 @@ import java.util.List;
 @SuppressWarnings("unused")
 public class ReflectionUtils {
     /**
-     * The {@link sun.misc.Unsafe} instance
+     * The {@link jdk.internal.misc.Unsafe} instance
      */
-    private static final sun.misc.Unsafe UNSAFE;
-    /**
-     * The offset of the <code>override</code> field in an instance of {@link AccessibleObject}
-     *
-     * @see #forceSetAccessible(AccessibleObject, boolean)
-     */
-    private static final long overrideOffset;
+    private static final jdk.internal.misc.Unsafe UNSAFE;
     /**
      * Trusted lookup
      */
     private static final MethodHandles.Lookup LOOKUP;
+    /**
+     * Handle for {@link AccessibleObject#setAccessible0(boolean)}
+     */
+    private static final MethodHandle setAccessible0;
 
     static {
-        UNSAFE = findUnsafe();
-        // This needs to be done first because createLookup() uses the overrideOffset field value
-        overrideOffset = findOverrideOffset();
-
-        if (overrideOffset == -1) {
-            throw new RuntimeException("Could not locate AccessibleObject#override!");
-        }
-
+        UNSAFE = jdk.internal.misc.Unsafe.getUnsafe();
         LOOKUP = createTrustedLookup();
+        setAccessible0 = setAccessible0Handle();
     }
 
     /**
@@ -55,7 +45,7 @@ public class ReflectionUtils {
      * @return the method with the specified owner, name and parameter types
      * @throws NoSuchMethodException if a field with the specified name and parameter types could not be found in the specified class
      */
-    public static Method getMethod(Class<?> owner, String name, Class<?>... paramTypes) throws NoSuchMethodException {
+    public static Method forceGetDeclaredMethod(Class<?> owner, String name, Class<?>... paramTypes) throws NoSuchMethodException {
         Method method = owner.getDeclaredMethod(name, paramTypes);
         forceSetAccessible(method, true);
         return method;
@@ -69,7 +59,7 @@ public class ReflectionUtils {
      * @return the field with the specified owner and name
      * @throws NoSuchFieldException if a field with the specified name could not be found in the specified class
      */
-    public static Field forceGetField(Class<?> owner, String name) throws NoSuchFieldException {
+    public static Field forceGetDeclaredField(Class<?> owner, String name) throws NoSuchFieldException {
         Field field = owner.getDeclaredField(name);
         forceSetAccessible(field, true);
         return field;
@@ -77,14 +67,14 @@ public class ReflectionUtils {
 
     /**
      * Gets a field by name and forces it to be accessible. <br>
-     * Use this instead of {@link #forceGetField(Class, String)} if the field name is not known.
+     * Use this instead of {@link #forceGetDeclaredField(Class, String)} if the field name is not known.
      *
      * @param owner     The class that declares the field
      * @param modifiers The access modifiers of the field
      * @param type      The type of the field
-     * @return the field with the specified owner, access modifiers and type.
+     * @return the field with the specified owner, access modifiers and type
      */
-    public static Field forceGetField(Class<?> owner, int modifiers, Class<?> type) {
+    public static Field forceGetDeclaredField(Class<?> owner, int modifiers, Class<?> type) {
         for (Field field : owner.getDeclaredFields()) {
             if (field.getModifiers() == modifiers && field.getType() == type) {
                 forceSetAccessible(field, true);
@@ -92,6 +82,36 @@ public class ReflectionUtils {
             }
         }
         throw new RuntimeException("Failed to get field from " + owner.getName() + " of type" + type.getName());
+    }
+
+    /**
+     * Forces the given {@link AccessibleObject} instance to have the desired accessibility.
+     *
+     * @param object     The object whose accessibility is to be forcefully set
+     * @param accessible The accessibility to be forcefully set
+     * @see #setAccessible0
+     */
+    @SuppressWarnings("SameParameterValue")
+    private static void forceSetAccessible(AccessibleObject object, boolean accessible) {
+        setAccessible(object, accessible);
+    }
+
+    /**
+     * Forces the given {@link AccessibleObject} instance to have the desired accessibility. <br>
+     * Unlike {@link AccessibleObject#setAccessible(boolean)}, this method does not perform any permission checks.
+     *
+     * @param object     The object whose accessibility is to be forcefully set
+     * @param accessible the accessibility to be forcefully set
+     * @return the value of the <code>accessible</code> argument
+     */
+    @SuppressWarnings("UnusedReturnValue")
+    public static boolean setAccessible(AccessibleObject object, boolean accessible) {
+        try {
+            return (boolean) setAccessible0.bindTo(object).invokeExact(accessible);
+        } catch (Throwable e) {
+            // This should never happen
+            throw new RuntimeException(e);
+        }
     }
 
     @SuppressWarnings("unchecked")
@@ -212,67 +232,50 @@ public class ReflectionUtils {
      * @return the offset of the <code>override</code> field of an {@link AccessibleObject} instance, <br>
      * or <code>-1</code> if the offset could not be determined
      */
-    @SuppressWarnings("deprecation")
     private static long findOverrideOffset() {
         long overrideOffset = -1;
         final AccessibleObject object = allocateInstance(AccessibleObject.class);
-        // In Java, the size of an integer is 32 bits
-        final int intSizeBytes = 32 / 8;
+        // 4 byte mark word (32 bit machine) and 4 byte klass word
+        final int minHeaderSizeBytes = 8;
 
-        for (int currentOffset = 0; currentOffset <= 64; currentOffset += 4) {
-            int original = UNSAFE.getInt(object, currentOffset);
-            object.setAccessible(true);
-            if (original != UNSAFE.getInt(object, currentOffset)) {
-                UNSAFE.putInt(object, currentOffset, original);
-                if (!object.isAccessible()) {
-                    overrideOffset = currentOffset;
-                    break;
-                }
-            }
+        /*
+         * As of JDK 17, there's technically no need to check up to 64 bytes because the object header is at most 12 bytes
+         * (12 bytes on a 64 bit machine, 8 bytes on a 32 bit machine), and the AccessibleObject class only declares a singular boolean field
+         * (the override field which we are interested in).
+         *
+         * This means that the offset should always be the size of the object header, but in case a few more fields are introduced in later JDK versions
+         * this code tries to account for it.
+         */
+        for (int currentOffset = minHeaderSizeBytes; currentOffset <= 64; currentOffset++) {
+            // Set the override field to false
             object.setAccessible(false);
+            // If the boolean value at the current offset is true, then it means it is not the override field, so keep trying
+            if (UNSAFE.getBoolean(object, currentOffset)) {
+                continue;
+            }
+            // Change the value of the override field to true
+            object.setAccessible(true);
+            // If the boolean value at the current offset is now true, then it means we found the override field
+            if (UNSAFE.getBoolean(object, currentOffset)) {
+                overrideOffset = currentOffset;
+                break;
+            }
         }
 
         return overrideOffset;
     }
 
     /**
-     * Forces the given {@link AccessibleObject} instance to have the desired accessibility.
+     * Gets a {@link MethodHandle} for {@link AccessibleObject#setAccessible0(boolean)}.
      *
-     * @param object     The object whose accessibility is to be forcefully set
-     * @param accessible The accessibility to be forcefully set
+     * @return the acquired {@link MethodHandle}
      */
-    private static void forceSetAccessible(AccessibleObject object, boolean accessible) {
-        UNSAFE.putInt(object, overrideOffset, accessible ? 1 : 0);
-    }
-
-    /**
-     * Gets a reference to the {@link sun.misc.Unsafe} instance in a JDK agnostic way, which means not relying on the field name.
-     *
-     * @return the {@link sun.misc.Unsafe} instance
-     */
-    private static sun.misc.Unsafe findUnsafe() {
-        final int unsafeModifiers = Modifier.STATIC | Modifier.FINAL;
-
-        final List<Throwable> exceptions = new ArrayList<>();
-        for (Field field : sun.misc.Unsafe.class.getDeclaredFields()) {
-
-            if (field.getType() != sun.misc.Unsafe.class || (field.getModifiers() & unsafeModifiers) != unsafeModifiers) {
-                continue;
-            }
-
-            try {
-                field.setAccessible(true);
-                if (field.get(null) instanceof sun.misc.Unsafe unsafe) {
-                    return unsafe;
-                }
-            } catch (Throwable e) {
-                exceptions.add(e);
-            }
+    private static MethodHandle setAccessible0Handle() {
+        try {
+            return findVirtual(AccessibleObject.class, "setAccessible0", boolean.class, boolean.class);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Could not get AccessibleObject#setAccessible0 handle!", e);
         }
-
-        RuntimeException exception = new RuntimeException("Could not find sun.misc.Unsafe instance!");
-        exceptions.forEach(exception::addSuppressed);
-        throw exception;
     }
 
     /**
@@ -282,21 +285,37 @@ public class ReflectionUtils {
      */
     private static MethodHandles.Lookup createTrustedLookup() {
         try {
-            var constructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, Class.class, int.class);
-            UNSAFE.putBoolean(constructor, overrideOffset, true);
-            return constructor.newInstance(Object.class, null, -1);
+            // See MethodHandles.Lookup#TRUSTED
+            final int trusted = -1;
+            long overrideOffset = findOverrideOffset();
+
+            if (overrideOffset == -1) {
+                throw new RuntimeException("Could not locate AccessibleObject#override!");
+            }
+
+            Constructor<MethodHandles.Lookup> lookupConstructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, Class.class, int.class);
+            // We cannot use forceSetAccessible for obvious reasons, so we resort to Unsafe
+            UNSAFE.putBoolean(lookupConstructor, overrideOffset, true);
+            return lookupConstructor.newInstance(Object.class, null, trusted);
         } catch (ReflectiveOperationException roe) {
             throw new RuntimeException("Could not create trusted lookup!", roe);
         }
     }
 
+    /**
+     * Allocates a new instance of the given class, throwing a {@link RuntimeException} if an {@link InstantiationException} occurs.
+     *
+     * @param clazz The class a new instance of which is to be created
+     * @return the allocated instance
+     * @see jdk.internal.misc.Unsafe#allocateInstance(Class)
+     */
     @SuppressWarnings({"unchecked", "SameParameterValue"})
     @NotNull
-    private static <T> T allocateInstance(@NotNull Class<T> type) {
+    private static <T> T allocateInstance(@NotNull Class<T> clazz) {
         try {
-            return (T) UNSAFE.allocateInstance(type);
-        } catch (Throwable e) {
-            throw new RuntimeException("Failed to allocate instance of " + getModuleInclusiveClassName(type), e);
+            return (T) UNSAFE.allocateInstance(clazz);
+        } catch (InstantiationException ie) {
+            throw new RuntimeException("Failed to allocate instance of " + getModuleInclusiveClassName(clazz), ie);
         }
     }
 
